--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body>
-        <h1>This is my GitHub Pages website. IT might be permanent.</h1>
+        <h1>Help</h1>
+        <p>so i had a nice long article ready but then my computer crashed and now here we are with no article isn't that just fun? just <em>amazing</em></p>
     </body>
 </html>
