--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
         <title>
             Velum Mortis
         </title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>-->
+        <link rel="stylesheet" href="global.css"/>
     </head>
     <body>
-        <h1>Help</h1>
+        <div class="header">
+            <div class="nav-bar-title">
+                <img src="logo.png" id="logo"/>
+            That's right, it's a title
+        </div>
+        <div class="nav-bar">
+            <a class="nav-bar-item" id="Home" href="index.html">Home</a>
+            <a class="nav-bar-item" href="">Button 1</a>
+            <a class="nav-bar-item" href="">Button 2</a>
+            <a class="nav-bar-item" href="">Button 3</a>
+            <a class="nav-bar-item" href="">Button 4</a>
+        </div>
+        <div class="search-bar">
+            <form type="submit" method="get" name="search">
+                <textarea placeholder="Search..."></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        </div>
+        <article>
+            <h1>Help</h1>
         <p>so i had a nice long article ready but then my computer crashed and now here we are with no article isn't that just fun? just <em>amazing</em></p>
+    </article>
     </body>
 </html>
