--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Velum Mortis
-        </title>
-        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>-->
-        <link rel="stylesheet" href="global.css"/>
-    </head>
-    <body>
-        <div class="header">
-            <div class="nav-bar-title">
-                <img src="logo.png" id="logo"/>
-            That's right, it's a title
+
+<head>
+    <title>
+        Velum Mortis
+    </title>
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>-->
+    <link rel="stylesheet" href="global.css" />
+</head>
+
+<body>
+    <div class="header">
+        <div class="nav-bar-title">
+            <a href=./index.html><img src="logo.png" id="logo" alt="Velum Mortis" /></a>
         </div>
         <div class="nav-bar">
             <a class="nav-bar-item" id="Home" href="index.html">Home</a>
@@ -21,15 +22,23 @@
             <a class="nav-bar-item" href="">Button 4</a>
         </div>
         <div class="search-bar">
-            <form type="submit" method="get" name="search">
-                <textarea placeholder="Search..."></textarea>
-                <button type="submit">Submit</button>
+            <form type="submit" method="get">
+                <input type="search" name="search" placeholder="Search..."></textarea>
+                <button type="submit"></button>
             </form>
         </div>
-        </div>
+    </div>
+    <div class="content">
         <article>
             <h1>Help</h1>
-        <p>so i had a nice long article ready but then my computer crashed and now here we are with no article isn't that just fun? just <em>amazing</em></p>
-    </article>
-    </body>
+            <p>so i had a nice long article ready but then my computer crashed and now here we are with no article isn't
+                that just fun? just <em>amazing</em></p>
+        </article>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+    </div>
+    <div class="footer">
+
+    </div>
+</body>
+
 </html>
