Fixed the frustrating reason why my content wouldn't respond...

--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
         <div class="content_container">
         <article>
             <h1>Help</h1>
-            <i>2022/02/20 20:06</i>
+            <sub><i>2022/02/20 20:06</i></sub>
             <p>Hi. I think we all know what we're here to discuss. That's right, you guessed it. Why am I so obsessed with media adaptations of the infamous Jang Hee Bin's life? <em>Let's unpack that.</em></p>
             <div class="article_img">
                 <img src="./images/weirdassmf.png" alt="This is why I need therapy"/><br/>
-                <figurecaption><i>Incriminating Evidence, Exhibit A</i></figurecaption>
+                <figurecaption><i>Incriminating Evidence, Exhibit A<br/>That's right, I made that. That meme is my child.</i></figurecaption>
             </div>
             <h2>Frequenly Asked Questions!</h2>
-            <p><q>Oh, it's just a fandom meme-</q> <em>No.</em> You don't understand. This is worse than just some fandom meme. It's the culmination of 10 (!!) years of obsession, searching, actually finding the shit I'm looking for and wondering: <em>"Is this what I spent a decade looking for?"</em> not because I didn't like the shows or something, but because I realize I know too much about this one topic and it literally hurts my brain sometimes.</p>
-            <p><q>But... but what's the point of all this?</q> <em>There isn't!</em> I'm gonna take forever to watch them all and then hate myself for it afterwards. But I <em>can't</em> stop watching them because I actually <em>like</em> watching them. <em>I want to dig the knowledge of them out of my head.</em></p>
-            <p><q>You're just overthinking this just watch your damn show</q> and you might be right! I just hate when the knowledge that I know about these shows and haven't finished them because I have to translate them myself strikes me so acutely at midnight. I've already translated <em>2 whole shows</em> and am still working on one, not even mentioning the trial episodes and clip translations? <em>Kill me now.</em></p>
-            <p><q>Are... are you okay?</q> idk am I?? I think I'm right in the middle where I'm okay enough that I don't violently cry about it anymore but still <em>not</em> okay enough that I'm writing all this in the first place. How about we pretend this is all just placeholder text? I think that would be just fine for everyone involved until I write something either more coherent or more deranged. :)</p>
+            <ul>
+            <li><p><q>Oh, it's just a fandom meme-</q> <em>No.</em> You don't understand. This is worse than just some fandom meme. It's the culmination of 10 (!!) years of obsession, searching, actually finding the shit I'm looking for and wondering: <em>"Is this what I spent a decade looking for?"</em> not because I didn't like the shows or something, but because I realize I know too much about this one topic and it literally hurts my brain sometimes.</p></li>
+            <li><p><q>But... but what's the point of all this?</q> <em>There isn't!</em> I'm gonna take forever to watch them all and then hate myself for it afterwards. But I <em>can't</em> stop watching them because I actually <em>like</em> watching them. <em>I want to dig the knowledge of them out of my head.</em></p></li>
+            <li><p><q>You're just overthinking this just watch your damn show</q> and you might be right! I just hate when the knowledge that I know about these shows and haven't finished them because I have to translate them myself strikes me so acutely at midnight. I've already translated <em>2 whole shows</em> and am still working on one, not even mentioning the trial episodes and clip translations? <em>Kill me now.</em></p></li>
+            <li><p><q>Are... are you okay?</q> idk am I?? I think I'm right in the middle where I'm okay enough that I don't violently cry about it anymore but still <em>not</em> okay enough that I'm writing all this in the first place. How about we pretend this is all just placeholder text? I think that would be just fine for everyone involved until I write something either more coherent or more deranged. :)</p></li>
+        </ul>
         </article>
         </div>
     </div>
